--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="pointandclick_joystickmouseaccel">Move mouse with joystick acceleration</string>
     <string name="none">None</string>
 
+    <string name="measurepressure">Calibrate touchscreen pressure</string>
     <string name="measurepressure_touchplease">Please slide finger across the screen for two seconds</string>
     <string name="measurepressure_response">Pressure %03d radius %03d</string>
 
@@ -89,5 +90,9 @@
     <string name="audiobuf_medium">Medium</string>
     <string name="audiobuf_large">Large (older devices, if sound is choppy)</string>
     <string name="audiobuf_question">Size of audio buffer</string>
+
+    <string name="remap_hwkeys">Remap physical keys</string>
+    <string name="remap_hwkeys_press">Press any key except HOME and POWER, you may use volume keys</string>
+    <string name="remap_hwkeys_select">Select SDL keycode</string>
 
 </resources>
