Menu for editing on-screen controls, not finished yet!

--- a/project/java/translations/values-de/strings.xml
+++ b/project/java/translations/values-de/strings.xml
@@ -13,7 +13,7 @@
     <string name="dl_from">Lade Daten von %s</string>
     <string name="error_dl_from">Fehler beim Download von %s</string>
     <string name="error_write">Fehler beim schreiben auf %s</string>
-    <string name="dl_progress">Zu %.0f%% abgeschlossen: Datei %s</string>
+    <string name="dl_progress">Zu %1$.0f%% abgeschlossen: Datei %2$s</string>
     <string name="dl_finished">Abgeschlossen</string>
 
     <string name="storage_phone">Interner Speicher: %d MiB frei</string>
@@ -52,7 +52,7 @@
 <string name="controls_screenkb_small">Kleine</string>
 <string name="controls_screenkb_tiny">Winzig</string>
 <string name="controls_screenkb_theme">On-Screen-Tastatur Thema</string>
-<string name="controls_screenkb_by">%s von %s</string>
+<string name="controls_screenkb_by">%1$s von %2$s</string>
 <string name="accel_floating">Schwimmend</string>
 <string name="accel_fixed_start">Feste, wenn die Anwendung startet</string>
 <string name="accel_fixed_horiz">Fixiert auf Tisch Schreibtisch Orientierung</string>
@@ -74,7 +74,7 @@
 <string name="leftclick_pressure">Touchscreen mit Kraft</string>
 <string name="leftclick_dpadcenter">Trackball klicken Select-Taste</string>
 <string name="pointandclick_joystickmouse">Bewegen Sie die Maus mit Joystick oder Trackball</string>
-<string name="measurepressure_response">Pressure %03d Radius %03d</string>
+<string name="measurepressure_response">Pressure %1$03d Radius %2$03d</string>
 <string name="click_with_dpadcenter">Linker Mausklick mit Trackball / Joystick Zentrum</string>
 <string name="pointandclick_joystickmousespeed">Bewegen Sie die Maus mit Joystick-Geschwindigkeit</string>
 <string name="pointandclick_joystickmouseaccel">Bewegen Sie die Maus mit Joystick-Beschleunigung</string>
