--- a/todo.txt
+++ b/todo.txt
@@ -13,18 +13,18 @@ Bugs to fix
 
 - Add an option for overlay buttons transparency and button images size.
 
-- Generic keycode remapper.
+- Running OpenGL SwapBuffers in a separate thread - huge speed improvement expected.
 
 - Show/hide screen controls with longpress on Text Edit button.
 
 - Zoom and rotate multitouch gestures should return some keycodes.
 
-- Adjustable speed for moving mouse via joystick
+- Right click by longpress.
 
-- Mouse buttons assigned to hw buttons only
+- Option to calibrate touch area of the screen.
 
-- Option to calibrate touch area of the screen
+- Calling SDL_SetVideoMode() with SDL 1.3 makes it crash.
 
-- Calling SDL_SetVideoMode() with SDL 1.3 makes it crash
+- Support for NDK r5.
 
 And that's all, I won't be doing any more development or fix other bugs (see bugs.txt for details).
