--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="trackball_slow">Slow</string>
     <string name="trackball_question">Trackball dampening</string>
 
+    <string name="accel_veryfast">Very fast</string>
     <string name="accel_fast">Fast</string>
     <string name="accel_medium">Medium</string>
     <string name="accel_slow">Slow</string>
@@ -106,6 +107,8 @@
     <string name="remap_screenkb_joystick">On-screen joystick</string>
     <string name="remap_screenkb_button">On-screen button</string>
     <string name="remap_screenkb_button_text">On-screen text input button</string>
+    <string name="remap_screenkb_button_gestures">Two-finger screen gestures</string>
+    <string name="remap_screenkb_button_gestures_sensitivity">Two-finger screen gestures sensitivity</string>
     <string name="remap_screenkb_button_zoomin">Zoom in two-finger gesture</string>
     <string name="remap_screenkb_button_zoomout">Zoom out two-finger gesture</string>
     <string name="remap_screenkb_button_rotateleft">Rotate left two-finger gesture</string>
