--- a/project/java/translations/values/strings.xml
+++ b/project/java/translations/values/strings.xml
@@ -114,4 +114,7 @@
     <string name="remap_screenkb_button_rotateleft">Rotate left two-finger gesture</string>
     <string name="remap_screenkb_button_rotateright">Rotate right two-finger gesture</string>
 
+    <string name="calibrate_touchscreen">Calibrate touchscreen</string>
+    <string name="calibrate_touchscreen_touch">Touch all four edges of the screen, press Back when done</string>
+
 </resources>
