--- a/project/java/translations/values-uk/strings.xml
+++ b/project/java/translations/values-uk/strings.xml
@@ -94,4 +94,8 @@
 <string name="remap_screenkb_button_gestures">Жест двома пальцями по екрану</string>
 <string name="accel_veryfast">Дуже швидко</string>
 <string name="remap_screenkb_button_gestures_sensitivity">Чутливість жесту двома пальцями по екрану</string>
+<string name="storage_custom">Вкажіть каталог</string>
+<string name="storage_commandline">Вкажіть параметри командного рядка</string>
+<string name="calibrate_touchscreen">Калібрування сенсорного екрану</string>
+<string name="calibrate_touchscreen_touch">Доторкнiться до всіх чотирьох країв екрану, потiм натисніть Назад</string>
 </resources>
