--- a/project/java/translations/values-fi/strings.xml
+++ b/project/java/translations/values-fi/strings.xml
@@ -104,5 +104,5 @@
 <string name="storage_custom">Määritä hakemisto</string>
 <string name="storage_commandline">Määritä komentoriviparametrit</string>
 <string name="calibrate_touchscreen">Kalibroi kosketusnäyttö</string>
-<string name="calibrate_touchscreen_touch">Touch kaikki neljä reunaa näytön, paina Takaisin, kun olet valmis</string>
+<string name="calibrate_touchscreen_touch">Touch kaikki neljä reunaa näytön, paina Valikko, kun olet valmis</string>
 </resources>
